# renderscript-ndk-cmake

./: README.markdown  key.jks
app/: CMakeLists.txt  build.gradle
app/libs/rsKernels_jni/jni/: Android.mk  Application.mk  reduction.rs
app/src/androidTest/java/com/example/renderscript/: ExampleInstrumentedTest.kt
app/src/androidTest/java/org/kuyil/lab/renderscript/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: dsp.cpp  dsp.h  native-lib.cpp
app/src/main/java/com/example/renderscript/: MainActivity.kt
app/src/main/java/org/kuyil/lab/renderscript/: MainActivity.kt
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/main/rs/: compute.rs
app/src/test/java/com/example/renderscript/: ExampleUnitTest.kt
app/src/test/java/org/kuyil/lab/renderscript/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
